Fix alignment of software version and footer padding

--- a/wger/core/static/css/workout-manager.css
+++ b/wger/core/static/css/workout-manager.css
@@ -26,6 +26,7 @@
     border-top: 1px solid #E5E5E5;
     border-bottom: 1px solid #000;
     padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 #main{
